# penrose-python

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
tests/: test_penrose.py
