[project]
name = "penrose"
version = "0.1.0"
description = "Create beautiful diagrams just by typing notation in plain text."
authors = [{ name = "Sam Estep" }]
requires-python = ">=3.8,<3.11"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = ["jax[cpu]"]

[tool.pdm.dev-dependencies]
test = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pdm.scripts]
test = "pytest"
